--- a/mapunsuk/Views/Shared/_LoginPartial.cshtml
+++ b/mapunsuk/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 <div class="nav-buttons">
     @if (SignInManager.IsSignedIn(User))
     {
-        <a class="nav-btn btn-add-activity" asp-controller="Post" asp-action="Create">เพิ่มกิจกรรมจิตอาสา</a>
+        <a class="nav-btn btn-add-activity" asp-controller="Post" asp-action="Manage">จัดการกิจกรรม</a>
         <a class="nav-user-greeting" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">สวัสดี @User.Identity?.Name!</a>
         <form class="logout-form" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" >
             <button  type="submit" class="nav-btn btn-login-custom">ออกจากระบบ</button>
