--- a/mapunsuk/Views/Shared/_LoginPartial.cshtml
+++ b/mapunsuk/Views/Shared/_LoginPartial.cshtml
@@ -19,11 +19,12 @@
             </button>
             <div id="userDropdownMenu" class="dropdown-menu">
                 <div class="dropdown-item user-info">ชื่อผู้ใช้: @UserManager.GetUserName(User)</div>
-                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">แก้ไขข้อมูลส่วนตัว</a>
+                <a class="dropdown-item" asp-controller="Account" asp-action="ManageProfile">แก้ไขข้อมูลส่วนตัว</a>
                 <a class="dropdown-item" asp-controller="Post" asp-action="Joined">จิตอาสาที่เข้าร่วม</a>
                 <a class="dropdown-item" asp-controller="Post" asp-action="History">ประวัติจิตอาสา</a>
                 <div class="dropdown-divider"></div>
-                <form class="logout-form" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
+                <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
+                    @Html.AntiForgeryToken()
                     <button type="submit" class="dropdown-item logout-button">ออกจากระบบ</button>
                 </form>
             </div>
@@ -31,7 +32,7 @@
     }
     else
     {
-        <a class="nav-btn btn-register-volunteer" asp-area="Identity" asp-page="/Account/Register">สมัครสมาชิกเป็นอาสา</a>
-        <a class="nav-btn btn-login-custom" asp-area="Identity" asp-page="/Account/Login">เข้าสู่ระบบ</a>
+        <a class="nav-btn btn-register-volunteer" asp-controller="Account" asp-action="Register">สมัครสมาชิกเป็นอาสา</a>
+        <a class="nav-btn btn-login-custom" asp-controller="Account" asp-action="Login">เข้าสู่ระบบ</a>
     }
 </div>
