--- a/mapunsuk/Views/Account/ManageProfile.cshtml
+++ b/mapunsuk/Views/Account/ManageProfile.cshtml
@@ -30,10 +30,10 @@
 
             <div class="name-group">
                 <div class="form-group">
-                    <input asp-for="FirstName" class="form-control" placeholder="นภัทร" />
+                    <input asp-for="FirstName" class="form-control" placeholder="ชื่อ" />
                 </div>
                 <div class="form-group">
-                    <input asp-for="LastName" class="form-control" placeholder="แสงวัง" />
+                    <input asp-for="LastName" class="form-control" placeholder="นามสกุล" />
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
             </div>
 
             <div class="form-group">
-                <input type="password" class="form-control" value="pleng123" disabled placeholder="รหัสผ่าน" />
+                <input type="password" class="form-control" value="********" disabled placeholder="รหัสผ่าน" />
             </div>
 
             <div class="form-group">
