--- a/mapunsuk/Views/Post/Create.cshtml
+++ b/mapunsuk/Views/Post/Create.cshtml
@@ -12,19 +12,19 @@
 
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" placeholder="ชื่อกิจกรรม"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+                <textarea asp-for="Description" class="form-control" rows="3" placeholder="รายละเอียด"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Location" class="control-label"></label>
-                <input asp-for="Location" class="form-control" />
+                <input asp-for="Location" class="form-control" placeholder="สถานที่" />
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
 
@@ -55,7 +55,7 @@
 
             <div class="form-group">
                 <label asp-for="MaxParticipants" class="control-label"></label>
-                <input asp-for="MaxParticipants" type="number" class="form-control" />
+                <input asp-for="MaxParticipants" type="number" class="form-control" placeholder="จำนวนผู้เข้าร่วม" />
                 <span asp-validation-for="MaxParticipants" class="text-danger"></span>
             </div>
 
